<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="countryCode"
            type="String" />

        <variable
            name="phoneNumber"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/point_top"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:gravity="center"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_more" />

        <ImageButton
            android:id="@+id/btn_more"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            android:rotation="90"
            android:scaleType="fitXY"
            android:src="@drawable/ic_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/point_top"
            app:tint="@color/primary_color"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_more"
            app:layout_constraintVertical_bias="0.3">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/yaga_will_need_to_verify_your_account_what_your_number"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/btn_pick_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/primary_color"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_solid_sort_down"
                android:focusable="true"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/choose_a_country"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/edt_country_code"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/primary_color"
                android:drawableStart="@drawable/ic_bi_plus"
                android:inputType="phone"
                android:maxLength="3"
                android:text='@{countryCode??null}'
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/btn_pick_country"
                app:layout_constraintTop_toBottomOf="@+id/btn_pick_country" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/primary_color"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="13"
                android:text='@{phoneNumber??null}'
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/edt_country_code"
                app:layout_constraintEnd_toEndOf="@+id/btn_pick_country"
                app:layout_constraintStart_toEndOf="@+id/edt_country_code"
                app:layout_constraintTop_toTopOf="@+id/edt_country_code" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/note_carrier_charges_may_apply"
                android:textColor="@color/color_on_second_50"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/btn_pick_country"
                app:layout_constraintStart_toStartOf="@+id/btn_pick_country"
                app:layout_constraintTop_toBottomOf="@+id/edt_country_code" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:elevation="2dp"
                android:paddingHorizontal="32dp"
                android:text="@string/next"
                android:translationZ="2dp"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>